--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,7 @@
 <resources>
     <string name="app_name">SplashZang</string>
 
-    <string name="action_settings">Settings</string>
-    <string name="nome">Nome:</string>
-    <string name="dificuldade">Dificuldade:</string>
-    <string name="facil">Fácil</string>
-    <string name="medio">Médio</string>
-    <string name="dificil">Difícil</string>
-    <string name="inicia">Iniciar jogo</string>
-    <string name="hint_nome">Digite o seu nome</string>
-    <string name="sair">Sair</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
-    <string name="recorde">Recordes</string>
-    <string name="title_activity_game_over">GameOver</string>
-    <string name="textoresultado">, sua pontuação foi:</string>
-    <string name="pontos">pontos!</string>
-    <string name="volta">Voltar</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
